// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing/functional/json-parsing/functional.test.ts with json blob parsed nested should stringify, then parse, then stringify 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "the",
      "scraper": "parseContentFromPost",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "quick",
      "scraper": "parseContentFromPost",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "brown",
      "scraper": "parseContentFromPost",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "fox",
      "scraper": "parseContentFromPost",
    },
  ],
]
`;

exports[`testing/functional/json-parsing/functional.test.ts with json that needs to be parsed out of a file should stringify, then parse, then stringify 1`] = `
Array [
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "the",
      "scraper": "parseContentFromPost",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "quick",
      "scraper": "parseContentFromPost",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "brown",
      "scraper": "parseContentFromPost",
    },
  ],
  Array [
    Object {
      "byteLength": null,
      "complete": 1,
      "downloadData": null,
      "filename": false,
      "id": true,
      "parsedValue": "fox",
      "scraper": "parseContentFromPost",
    },
  ],
]
`;

exports[`testing/functional/json-parsing/functional.test.ts with simple json response should get em 1`] = `
Array [
  Array [
    Object {
      "byteLength": "300.0",
      "complete": 1,
      "downloadData": "[\\"http://json-parsing.com/api-response.json\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": false,
      "id": true,
      "parsedValue": "the",
      "scraper": "apiResponse",
    },
    Object {
      "byteLength": "300.0",
      "complete": 1,
      "downloadData": "[\\"http://json-parsing.com/api-response.json\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": false,
      "id": true,
      "parsedValue": "quick",
      "scraper": "apiResponse",
    },
    Object {
      "byteLength": "300.0",
      "complete": 1,
      "downloadData": "[\\"http://json-parsing.com/api-response.json\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": false,
      "id": true,
      "parsedValue": "brown",
      "scraper": "apiResponse",
    },
    Object {
      "byteLength": "300.0",
      "complete": 1,
      "downloadData": "[\\"http://json-parsing.com/api-response.json\\",{\\"headers\\":{},\\"method\\":\\"GET\\"}]",
      "filename": false,
      "id": true,
      "parsedValue": "fox",
      "scraper": "apiResponse",
    },
  ],
]
`;
